Moved jQuery overrides after the jQuery styles - this was to fix the issue with open account dialog not showing the dark overlay.
Changed order of calls to open_account_dialog to .removeClass("hidden").dialog('open'). The reverse order was causing the dialog to not center on the page.

git-svn-id: http://archfirst.googlecode.com/svn/trunk@405 5f1d654b-2d44-f8f1-813d-ae2f855fe689

--- a/html/apps/bfclient-jquery/css/style.css
+++ b/html/apps/bfclient-jquery/css/style.css
@@ -73,12 +73,7 @@ input:invalid, textarea:invalid { background-color: #f0dddd; }
 table { border-collapse: collapse; border-spacing: 0; }
 td { vertical-align: top; }
 
-/* jQuery UI
- * -------------------------------------------------------------------------- */
-.ui-widget-overlay {
-    opacity: .7; 
-    background: black;
-} 
+/* ==|== jQuery UI ======================================================= */
 /*
  * jQuery UI CSS Framework 1.8.16
  *
@@ -807,7 +802,12 @@ footer {
     margin-right: 6px;
 }
 
-
+/* jQuery UI Overrides
+ * -------------------------------------------------------------------------- */
+.ui-widget-overlay {
+    opacity: .7; 
+    background: black;
+} 
 
 
 
